# kontor

./: .gitignore  CHANGELOG.md  NOTICE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/fundamentals/: AAPL.csv  MSFT.csv
data/manual/: provenance.json
data/universes/: ai_infra_pit.csv  ai_infra_segments.csv  ai_infra_ub.csv  nasdaq100_constituents.csv  sp500_constituents.csv
docs/: german-tax-model.md  live-order-derivation.md
scripts/: download_pit_data.py  train_sector_regime_classifier.py  train_semiconductor_bundle.py
src/backtest/: __init__.py  (+37 more)
strategies/: 3x_bh.py  __init__.py  _momentum_utils.py  _tsmom_bond_safeleg.py  ai_infra_basket.py  all_weather.py  analyst_momentum_filter.py  buy_and_hold.py  classic_60_40.py  dual_momentum.py  inverse_vol_risk_parity.py  levered_5x_momentum_guard.py  levered_etf_momentum_sticky.py  levered_etf_momentum_sticky_adaptive_v2.py  levered_momentum_crash_guard.py  levered_momentum_crash_guard_lbh_challenger.py  meta_allocator.py  ml_forecast_tilt.py  momentum_topn_pit_sp500.py  sector_rotation_momentum.py  sentiment_tilt.py  sticky_levered_cascade.py  sticky_levered_entry_staged.py  sticky_levered_tax_aware.py  sticky_levered_vol_targeted.py  sticky_levered_vol_targeted_pct120.py  sticky_levered_vol_targeted_sector_aware.py  trend_following_sma.py  volatility_targeting.py
tests/: __init__.py  test_ai_infra_basket.py  test_analyst_momentum_filter.py  test_assets.py  test_backtester.py  test_batch_optimize_progress.py  test_cache_integrity.py  test_cli_execution_options.py  test_cli_walk_forward.py  test_comparator_rebalance_frequency.py  test_consistency.py  test_cost_profile.py  test_currency_lse.py  test_daily_mark_to_market.py  test_data_loader_cache.py  test_dividends.py  test_execution_model.py  test_exposure_policy.py  test_external_features_adapter.py  test_external_features_analyst_schema.py  test_external_features_cli.py  test_external_features_finnhub_actions_adapter.py  test_external_features_finnhub_client.py  test_external_features_finnhub_current_adapter.py  test_external_features_finnhub_trends_adapter.py  test_external_features_loader.py  test_external_features_ml_adapter.py  test_external_features_ml_lstm.py  test_external_features_ml_manifest.py  test_external_features_ml_models_import_without_torch.py  test_external_features_ml_schema.py  test_external_features_ml_sequence.py  test_external_features_ml_splits.py  test_external_features_ml_targets.py  test_external_features_ml_transformer.py  test_external_features_multi_loader.py  test_external_features_news_adapters.py  test_external_features_news_decision.py  test_external_features_news_schema.py  test_external_features_phase_b_idempotency.py  (+65 more)
tools/: find_limiting_ticker.py
(+297 files in other folders)
